# DHT11-zynq

./: README.md
hdl/: component.xml
ipblock/: component.xml
ipblock/sim/: myperipheral_v1_0_S00_AXI.vhd
ipblock/src/: dht_top.vhd  myperipheral_v1_0.vhd  myperipheral_v1_0_S00_AXI.vhd
kernel_driver/: Makefile  dht11.c  set_env
kernel_driver/Application/: CMakeLists.txt  dht11_app.c
userspace/: CMakeLists.txt  axislaveinterface.c  set_env
